--- a/images/base/yarn-site.xml.j2
+++ b/images/base/yarn-site.xml.j2
@@ -27,6 +27,11 @@
     <value>resourcemanager.docker.net</value>
   </property>
 
+  <property>
+    <name>yarn.resourcemanager.scheduler.address</name>
+    <value>resourcemanager.docker.net:8030</value>
+  </property>
+
   <!--
     Shuffle service that needs to be set for Map Reduce applications.
   -->
