--- a/images/base/yarn-site.xml.j2
+++ b/images/base/yarn-site.xml.j2
@@ -124,7 +124,7 @@
 
   <property>
     <name>yarn.resourcemanager.keytab</name>
-    <value>/secrets/yarn.keytab</value>
+    <value>/shared/yarn.keytab</value>
   </property>
 
   <property>
@@ -134,7 +134,7 @@
 
   <property>
     <name>yarn.nodemanager.keytab</name>
-    <value>/secrets/yarn.keytab</value>
+    <value>/shared/yarn.keytab</value>
   </property>
 
   <property>
