--- a/images/hive/hive-site.xml.j2
+++ b/images/hive/hive-site.xml.j2
@@ -100,7 +100,7 @@
     </property>
     <property>
         <name>hive.metastore.kerberos.keytab</name>
-        <value>/secrets/hive.keytab</value>
+        <value>/shared/hive.keytab</value>
     </property> -->
 
     <!-- <property>
@@ -109,7 +109,7 @@
     </property>
     <property>
         <name>hive.server2.authentication.kerberos.keytab</name>
-        <value>/secrets/hive.keytab</value>
+        <value>/shared/hive.keytab</value>
     </property> -->
 
 </configuration>
