Apply few minor improvements

--- a/images/hive/hive-site.xml.j2
+++ b/images/hive/hive-site.xml.j2
@@ -60,7 +60,7 @@
     <property>
         <name>hive.execution.engine</name>
         <value>mr</value>
-        <description>Chooses execution engine. Options are: mr (Map Reduce, default), tez (Tez execution, for Hadoop 2 only), or spark (Spark execution, for Hive 1.1.0 onward).</description>
+        <description>Chooses data processing engine. Options are: mr (Map Reduce, default), tez (Tez execution, for Hadoop 2 only), or spark (Spark execution, for Hive 1.1.0 onward).</description>
     </property>
 
 
