--- a/images/base/hive-site.xml.j2
+++ b/images/base/hive-site.xml.j2
@@ -115,7 +115,7 @@
     -->
     <property>
       <name>hive.server2.authentication.kerberos.keytab</name>
-      <value>/shared/hive.keytab</value>
+      <value>/shared/secrets/hive.keytab</value>
     </property>
 
     <!--
