--- a/images/base/yarn-site.xml.j2
+++ b/images/base/yarn-site.xml.j2
@@ -154,7 +154,7 @@
 
   <property>
     <name>yarn.resourcemanager.keytab</name>
-    <value>/shared/yarn.keytab</value>
+    <value>/shared/secrets/yarn.keytab</value>
   </property>
 
   <property>
@@ -164,7 +164,7 @@
 
   <property>
     <name>yarn.nodemanager.keytab</name>
-    <value>/shared/yarn.keytab</value>
+    <value>/shared/secrets/yarn.keytab</value>
   </property>
 
   <property>
