Rename shared directory

--- a/images/base/mapred-site.xml.j2
+++ b/images/base/mapred-site.xml.j2
@@ -97,7 +97,7 @@
 
   <property>
     <name>mapreduce.jobhistory.keytab</name>
-    <value>/shared/secrets/mapred.keytab</value>
+    <value>/mount/secrets/mapred.keytab</value>
   </property>
 
   <property>
