--- a/images/base/mapred-site.xml.j2
+++ b/images/base/mapred-site.xml.j2
@@ -8,6 +8,16 @@
     <value>yarn</value>
   </property>
 
+  <!--
+    The CLASSPATH for any kind MapReduce applications
+  -->
+  <property>
+    <name>mapreduce.application.classpath</name>
+    <value>
+      $HADOOP_MAPRED_HOME/*,$HADOOP_MAPRED_HOME/lib/*
+    </value>
+  </property>
+
 
   <!--
     The address of the JobHistory Server host:port
@@ -32,7 +42,7 @@
   -->
   <property>
     <name>yarn.app.mapreduce.am.staging-dir</name>
-    <value>/user</value>
+    <value>/tmp/hadoop-yarn/staging</value>
   </property>
 
   <!--
