Remove the edge container

--- a/images/base/yarn-site.xml.j2
+++ b/images/base/yarn-site.xml.j2
@@ -92,20 +92,15 @@
     List of directories to store localized files in.
     An application's localized file directory will be found in:
 
-        ${yarn.nodemanager.local-dirs}/
-        ├── filechache/
-        ├── nmPrivate/
-        ├── usercache/
-        .   ├──${user}/
-            .  ├──appcache/
-               │  ├──application_${appid}/
-               │  │  ├──container_${containerid}
-               │  │  │  ├── launch_container.sh
-               │  │  │  ├── job.jar
-               │  .  .
-               ├──filecache/
-
-    Individual containers' work directories, called container_${contid}, will be subdirectories of this.
+    ${yarn.nodemanager.local-dirs}/
+      usercache/
+        ${user}/
+          appcache/
+             application_${appid}/
+               container_${containerid}/
+                  launch_container.sh
+                  job.jar
+                  ...
   -->
   <property>
     <name>yarn.nodemanager.local-dirs</name>
