--- a/images/base/yarn-site.xml.j2
+++ b/images/base/yarn-site.xml.j2
@@ -161,7 +161,7 @@
 
   <property>
     <name>yarn.resourcemanager.keytab</name>
-    <value>/mount/secrets/yarn.keytab</value>
+    <value>/shared/secrets/yarn.keytab</value>
   </property>
 
   <property>
@@ -171,7 +171,7 @@
 
   <property>
     <name>yarn.nodemanager.keytab</name>
-    <value>/mount/secrets/yarn.keytab</value>
+    <value>/shared/secrets/yarn.keytab</value>
   </property>
 
   <property>
