--- a/images/base/bash_profile.j2
+++ b/images/base/bash_profile.j2
@@ -12,7 +12,7 @@ export PATH
 {% if HADOOP_AUTHENTICATION == 'kerberos' %}
 # Set Kerberos authentication variables
 export KERBEROS_PRINCIPAL="{{ comp1 }}{% if comp2 %}/{{ comp2 }}{% endif %}"
-export KERBEROS_KEYTAB="/mount/secrets/{{ comp1 }}.keytab"
+export KERBEROS_KEYTAB="/shared/secrets/{{ comp1 }}.keytab"
 
 # Acquire Kerberos TGT
 kinit -k -t $KERBEROS_KEYTAB $KERBEROS_PRINCIPAL
