Install MySQL connectors

--- a/images/hive/metastore/hivemetastore-site.xml.j2
+++ b/images/hive/metastore/hivemetastore-site.xml.j2
@@ -20,7 +20,7 @@
     -->
     <property>
         <name>javax.jdo.option.ConnectionDriverName</name>
-        <value>org.mysql.jdbc.Driver</value>
+        <value>com.mysql.jdbc.Driver</value>
     </property>
 
     <!--
