--- a/images/hive/server2/beeline-site.env.j2
+++ b/images/hive/server2/beeline-site.env.j2
@@ -1,5 +1,7 @@
+#HDFS_URL="$(xmllint --xpath "string(//configuration/property/value)" $HADOOP_CONF_DIR/core-site.xml)"
+HDFS_URL="hdfs://namenode.docker.net:8020"
 {% if HADOOP_AUTHENTICATION == 'kerberos' %}
-BEELINE_URL="jdbc:hive2://hive.docker.net:10000/default;user=charlie;password=bogus;principal=hive/docker.net@DOCKER.NET"
+BEELINE_URL="jdbc:hive2://hiveserver2.docker.net:10000/default;user=charlie;password=bogus;principal=hive/docker.net@DOCKER.NET"
 {% else %}
-BEELINE_URL="jdbc:hive2://hive.docker.net:10000/default;user=charlie;password=bogus"
+BEELINE_URL="jdbc:hive2://hiveserver2.docker.net:10000/default;user=charlie;password=bogus"
 {% endif %}
