--- a/images/hive/server2/hiveserver2-site.xml.j2
+++ b/images/hive/server2/hiveserver2-site.xml.j2
@@ -102,7 +102,7 @@
     -->
     <property>
       <name>hive.server2.authentication.kerberos.keytab</name>
-      <value>/shared/secrets/hive.keytab</value>
+      <value>/conf/hive.keytab</value>
     </property>
 
     <!--
